# bajiru-karaoke-site

./: .gitignore  .sqlfluff  README.md  compose.yaml  docker-compose.yaml  package.json
backend/: .dockerignore  Cargo.toml  Dockerfile  README.md  docker-entrypoint.sh
backend/crates/api-types/: Cargo.toml
backend/crates/api-types/src/: auth.rs  common.rs  lib.rs  lyrics.rs  pagination.rs  performances.rs  playlists.rs  songs.rs  tags.rs
backend/crates/db/: Cargo.toml
backend/crates/db/migrations/: 0001_initial.sql
backend/crates/db/src/: error.rs  lib.rs  models.rs  queries.rs
backend/crates/db/src/models/: artist.rs  capability.rs  image.rs  lyrics.rs  performance.rs  performance_audio.rs  performance_video.rs  playlist.rs  session.rs  song.rs  tag.rs  user.rs  user_credential.rs
backend/crates/db/src/queries/: artists.rs  audio.rs  capabilities.rs  cover_art.rs  genres.rs  images.rs  lyrics.rs  performance_audios.rs  performance_videos.rs  performances.rs  playlists.rs  sessions.rs  songs.rs  tags.rs  user_credentials.rs  users.rs  video.rs
backend/crates/server/: Cargo.toml
backend/crates/server/src/: auth.rs  capabilities.rs  config.rs  convert.rs  docs.rs  error.rs  main.rs  media.rs  pagination.rs  routes.rs  state.rs  storage.rs  tasks.rs
backend/crates/server/src/auth/: discord.rs  jwt.rs  middleware.rs  password.rs  session.rs  twitch.rs
backend/crates/server/src/routes/: performances.rs  playlists.rs  songs.rs  tags.rs  users.rs
backend/crates/server/src/routes/performances/: lyrics.rs
backend/crates/server/src/routes/songs/: lyrics.rs
backend/crates/server/src/tasks/: session_cleanup.rs
frontend/: package.json
nginx/: nginx.conf
nginx/templates/: default.conf.template
