[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.96.0"
license = "AGPL-3.0-only"

[workspace.dependencies]
api-types = { path = "crates/api-types" }
db = { path = "crates/db" }
axum = { version = "0.8", features = ["macros", "multipart"] }
utoipa = { version = "5", features = ["chrono"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
sqlx = { version = "0.9", features = [
    "runtime-tokio",
    "tls-rustls-ring",
    "mysql",
    "chrono",
    "macros",
] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
mime_guess = "2"
oauth2 = "4"
reqwest = { version = "0.12", features = ["json"] }
jsonwebtoken = "9"
axum-extra = { version = "0.12", features = ["cookie"] }
cookie = "0.18"
argon2 = "0.5"
