[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.96.0"
license = "AGPL-3.0-only"

[workspace.dependencies]
api-types = { path = "crates/api-types" }
argon2 = "0.5"
axum = { version = "0.8", features = ["macros", "multipart"] }
axum-extra = { version = "0.12", features = ["cookie"] }
chrono = { version = "0.4", features = ["serde"] }
cookie = "0.18"
db = { path = "crates/db" }
hex = "0.4"
mime_guess = "2"
oauth2 = "4"
rand_core = "0.6"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.9", features = [
    "runtime-tokio",
    "tls-rustls-ring",
    "mysql",
    "chrono",
    "macros",
] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
utoipa = { version = "5", features = ["chrono"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
uuid = { version = "1", features = ["v4"] }
