[package]
name = "db"
version = "0.0.1"
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }

[dependencies]
chrono = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
