[package]
name = "server"
version = "0.0.1"
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
api-types = { workspace = true }
db = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
mime_guess = { workspace = true }
oauth2 = { workspace = true }
reqwest = { workspace = true }
jsonwebtoken = { workspace = true }
axum-extra = { workspace = true }
cookie = { workspace = true }
argon2 = { workspace = true }
